# kaggle_20q

./: README.md  Training.ipynb  einops-0.8.0-py3-none-any.whl  keywords_by_category.pkl  pyproject.toml  submission_gen.ipynb  submission_gen_internlm.ipynb  test.ipynb  utils.py  utils_answerer.py  utils_asker.py  utils_guesser.py  utils_simulate.py
data/: clean_eval_set.ipynb  eval_set.json  keywords.csv  train_set.json
data/obs_examples/: obs_answering.pkl  obs_asking.pkl  obs_guessing.pkl
data_collection/: answer.py  collect_gpt4_data.ipynb  collect_gpt4_data_snapshots.ipynb  collect_gpt4_data_tests.ipynb  dataset_manipulations.ipynb  final_prepare_dataset.ipynb  generate_snapshot.py  guess.py  models.py  questions_candidates.py  questions_candidates_entropy.py  questions_pick.py  semaphore.py  simulate_game.py  utils.py
