[tool.poetry]
name = "kaggle_20q"
version = "0.1.0"
description = ""
authors = ["Kirill Yakunin <yakunin.k@mail.ru>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.0.0"
openai = "^1.34.0"
pandas = "^2.2.2"
scikit-learn = "^1.5.0"
python-dotenv = "^1.0.1"
matplotlib = "^3.9.0"
tenacity = "^8.4.1"
transformers = "^4.41.2"
torch = "^2.3.1"
accelerate = "^0.31.0"
numpy = "^1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
